<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    
    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_launcher"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#DE000000"
        android:textSize="16sp"
        android:text="@string/msg_about_app"/>
    
    <TextView
        android:id="@+id/app_versioncode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="#8A000000"
        android:textSize="14sp"
        android:text="@string/msg_about_version"/>
    
    <TextView
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:textColor="#8A000000"
        android:textSize="14sp"
        android:text="@string/msg_about_msg1"/>
    
    <TextView
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:textColor="#8A000000"
        android:textSize="14sp"
        android:text="@string/msg_about_msg2"/>
    
    <TextView
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:textColor="#8A000000"
        android:textSize="14sp"
        android:text="@string/msg_copy_right"/>
        
</LinearLayout>