<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/wallpaper_detail_set_lockscreen"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        style="@style/TextAppearance.WallpaperDetailPopupText"
        android:text="@string/wallpaper_detail_popupwindow_set_lockscreen"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wallpaper_detail_popup_divider_color"
        />

    <TextView
        android:id="@+id/wallpaper_detail_set_desktop"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        style="@style/TextAppearance.WallpaperDetailPopupText"
        android:text="@string/wallpaper_detail_popupwindow_set_walllpaper"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wallpaper_detail_popup_divider_color"
        />

    <TextView
        android:id="@+id/wallpaper_detail_set_desktop_and_lockscreen"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        style="@style/TextAppearance.WallpaperDetailPopupText"
        android:text="@string/wallpaper_detail_popupwindow_set_together"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wallpaper_detail_popup_divider_color"
        />

    <TextView
        android:id="@+id/wallpaper_detail_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        android:text="@string/wallpaper_detail_popupwindow_cancel"
        android:textColor="@color/gray_light"
        android:textSize="16sp"
        android:gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wallpaper_detail_popup_divider_color"
        />

</LinearLayout>