<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
         >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textSize="14sp"
            />
        <RatingBar
            android:id="@+id/rating"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:numStars="5"
            android:rating="3.5" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_test"
            android:layout_toRightOf="@id/rating"
            android:layout_alignParentRight="true"
            android:layout_below="@id/name"
            android:textSize="12sp"
            android:gravity="right"
            />



        <com.hb.thememanager.views.ExpandableTextView
            android:layout_below="@id/rating"
            android:id="@+id/comment"
            style="@style/TextAppearance.ThemeDetailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="272dp"
            android:layout_marginTop="5dp"
            app:contentTextColor="@color/gray_light"
            android:text="@string/theme_detail_desc_test"
            app:contentTextSize="@dimen/topic_detail_page_bannerdes_content_size"
            app:maxCollapsedLines="3"
            app:collapseExpandGrarity="right"
        />
</RelativeLayout>
